--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi
-uvicorn
-requests
-beautifulsoup4
+fastapi>=0.68.0,<0.69.0
+pydantic>=1.8.0,<2.0.0
+uvicorn>=0.15.0,<0.16.0
+requests>=2.26.0,<3.0.0
+beautifulsoup4>=4.10.0,<5.0.0
