--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: scraper-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn scraper_api:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn scraper_api:app --host=0.0.0.0 --port=$PORT --proxy-headers
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.0
+        value: 3.9
