--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,5 @@ services:
     name: scraper-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn scraper_api:app --host=0.0.0.0 --port=$PORT --proxy-headers
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.9
+    startCommand: uvicorn scraper_api:app --host=0.0.0.0 --port=10000
+    plan: free
